[package]
name = "learn-rust-with-web-application-my-todo"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
dotenvy = "0.15.7"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[features]
database-test = []
